--- a/trunk/yfaces-core/pom.xml
+++ b/trunk/yfaces-core/pom.xml
@@ -11,10 +11,6 @@
 		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
   	
 	  	<resources>
-	  		<resource>
-	  			<directory>src-new</directory>
-	          <includes><include>**/*.java</include></includes>
-	  		</resource>
 	  	</resources>
 	  	<plugins>
 	  		<plugin>
@@ -27,38 +23,21 @@
         			</configuration>
 	  		</plugin>
   			<plugin>
-        		<groupId>org.codehaus.mojo</groupId>
-        		<artifactId>build-helper-maven-plugin</artifactId>
-        		<version>1.1</version>
-        		<executions>
-          			<execution>
-            			<id>add-source</id>
-            			<phase>generate-sources</phase>
-            			<goals>
-              				<goal>add-source</goal>
-            			</goals>
-            			<configuration>
-              				<sources>
-                				<source>${basedir}/src-platform</source>
-              				</sources>
-            			</configuration>
-          			</execution>
-        		</executions>
-			</plugin>	  		
-      		<plugin>
         		<artifactId>maven-assembly-plugin</artifactId>
        			<configuration>
           			<descriptors>
             			<descriptor>src/main/assembly/src.xml</descriptor>
           			</descriptors>
         		</configuration>        		
-        	</plugin>
-      		<plugin>
-      			<groupId>org.codehaus.mojo</groupId>
-      			<artifactId>wagon-maven-plugin</artifactId>
-      			<version>1.0-beta-1</version>
-      		</plugin>			
+        	</plugin>			
 	  	</plugins>
+	  	<extensions>
+	  		<extension>
+	  			<groupId>org.apache.maven.wagon</groupId>
+	  			<artifactId>wagon-webdav</artifactId>
+	  			<version>1.0-beta-1</version>
+	  		</extension>
+	  	</extensions>
   
   </build>
   <profiles>
@@ -69,6 +48,9 @@
   	<repository>
   		<id>jboss-maven2-release-repository</id>
   		<url>http://repository.jboss.org/maven2/</url>
+  		<releases>
+  			<enabled>false</enabled>
+  		</releases>
   	</repository>
   </repositories>
   <dependencies>
@@ -158,13 +140,13 @@
   <distributionManagement>
   	<repository>
   		<id>codehaus.org</id>
-  		<name>YFaces Central Repository</name>
+  		<name>YFaces Repository</name>
   		<url>dav:https://dav.codehaus.org/repository/yfaces/</url>
   	</repository>
   	<snapshotRepository>
   		<uniqueVersion>false</uniqueVersion>
   		<id>codehaus.org</id>
-  		<name>YFaces Central Development Repository</name>
+  		<name>YFaces Snapshots Repository</name>
   		<url>dav:https://dav.codehaus.org/snapshots.repository/yfaces/</url>
   	</snapshotRepository>
   	<site>
