--- a/trunk/yfaces-core/pom.xml
+++ b/trunk/yfaces-core/pom.xml
@@ -1,202 +1,236 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.codehaus.yfaces</groupId>
-  <artifactId>yfaces-core</artifactId>
-  <name>yFaces</name>
-  <version>0.0.1-SNAPSHOT</version>
-  <description>Make component development easy ... fast, declarative, use-case driven.</description>
-  <url>http://yfaces.codehaus.org/</url>
-  <inceptionYear>2009</inceptionYear>
-  <issueManagement>
-  	<system>Jira</system>
-  	<url>http://jira.codehaus.org/browse/YFACES</url>
-  </issueManagement>
-  <developers>
-  	<developer>
-  		<name>Denny Strietzbaum</name>
-  		<email>dstrietz@codehaus.org</email>
-  	</developer>
-  	<developer>
-  		<name>Thomas Hertz</name>
-  		<email>thomas.hertz@hybris.de</email>
-  	</developer>
-  </developers>
-  <scm>
-  	<tag>trunk</tag>
-  	<url>http://svn.codehaus.org/yfaces/</url>
-  </scm>
-<licenses>
-  <license>
-    <name>Apache 2</name>
-    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-    <distribution>repo</distribution>
-    <comments>A business-friendly OSS license</comments>
-  </license>
-</licenses>
-<organization>
-	<name>hybris</name>
-	<url>http://www.hybris.com</url>
-</organization>    
-  <build>
- 		<defaultGoal>install</defaultGoal>  	
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.codehaus.yfaces</groupId>
+	<artifactId>yfaces-core</artifactId>
+	<name>yFaces</name>
+	<version>0.0.1</version>
+	<description>Make component development easy ... fast, declarative, use-case driven.</description>
+	<url>http://yfaces.codehaus.org/</url>
+	<inceptionYear>2009</inceptionYear>
+	<issueManagement>
+		<system>Jira</system>
+		<url>http://jira.codehaus.org/browse/YFACES</url>
+	</issueManagement>
+	<developers>
+		<developer>
+			<name>Denny Strietzbaum</name>
+			<email>dstrietz@codehaus.org</email>
+		</developer>
+		<developer>
+			<name>Thomas Hertz</name>
+			<email>thomas.hertz@hybris.de</email>
+		</developer>
+	</developers>
+	<scm>
+		<tag>trunk</tag>
+		<url>http://svn.codehaus.org/yfaces/</url>
+	</scm>
+	<licenses>
+		<license>
+			<name>Apache 2</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+			<comments>A business-friendly OSS license</comments>
+		</license>
+	</licenses>
+	<organization>
+		<name>hybris</name>
+		<url>http://www.hybris.com</url>
+	</organization>
+	<build>
+		<defaultGoal>install</defaultGoal>
 		<directory>${basedir}/target</directory>
 		<finalName>${artifactId}-${version}</finalName>
 		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
-  	
-	  	<resources>
-	  	</resources>
-	  	<plugins>
-	  		<plugin>
-	  			<groupId>org.apache.maven.plugins</groupId>
-	  			<artifactId>maven-compiler-plugin</artifactId>
-	  			<version>2.0.2.SP1</version>
- 					<configuration>  
-          			<source>1.5</source>  
-          			<target>1.5</target>  
-        			</configuration>
-	  		</plugin>
-  			<plugin>
-        		<artifactId>maven-assembly-plugin</artifactId>
-       			<configuration>
-          			<descriptors>
-            			<descriptor>src/main/assembly/src.xml</descriptor>
-          			</descriptors>
-        		</configuration>        		
-        	</plugin>			
-	  	</plugins>
-	  	<extensions>
-	  		<extension>
-	  			<groupId>org.apache.maven.wagon</groupId>
-	  			<artifactId>wagon-webdav</artifactId>
-	  			<version>1.0-beta-1</version>
-	  		</extension>
-	  	</extensions>
-  
-  </build>
-  <profiles>
-  </profiles>
-  
-  
-  <repositories>
-  	<repository>
-  		<id>jboss-maven2-release-repository</id>
-  		<url>http://repository.jboss.org/maven2/</url>
-  		<releases>
-  			<enabled>false</enabled>
-  		</releases>
-  	</repository>
-  </repositories>
-  <pluginRepositories>
-  </pluginRepositories>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.sun.facelets</groupId>
-  		<artifactId>jsf-facelets</artifactId>
-  		<version>1.1.15.B1</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>apache-log4j</groupId>
-  		<artifactId>log4j</artifactId>
-  		<version>1.2.8</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>javax.el</groupId>
-  		<artifactId>el-api</artifactId>
-  		<version>1.2</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.myfaces.core</groupId>
-  		<artifactId>myfaces-api</artifactId>
-  		<version>1.2.4</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.myfaces.core</groupId>
-  		<artifactId>myfaces-impl</artifactId>
-  		<version>1.2.4</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>javax.servlet</groupId>
-  		<artifactId>servlet-api</artifactId>
-  		<version>2.5</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>commons-io</groupId>
-  		<artifactId>commons-io</artifactId>
-  		<version>1.4</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>commons-lang</groupId>
-  		<artifactId>commons-lang</artifactId>
-  		<version>2.4</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring</artifactId>
-		<version>2.5.6</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-	</dependency>
-	<dependency>
-		<groupId>jboss</groupId>
-		<artifactId>jboss-serialization</artifactId>
-		<version>1.0.3.GA</version>
-		<type>jar</type>
-		<scope>compile</scope>
-	</dependency>
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.5</version>
-		<type>jar</type>
-		<scope>test</scope>
-	</dependency>
-  	
-  </dependencies>
-  <reporting>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-project-info-reports-plugin</artifactId>
-  			<version>2.1</version>
-  		</plugin>
-  	</plugins>
-  </reporting>
-  <dependencyManagement>
-  	<dependencies>
-  	</dependencies>
-  </dependencyManagement>
-  <distributionManagement>
-  	<repository>
-  		<id>codehaus.org</id>
-  		<name>YFaces Repository</name>
-  		<url>dav:https://dav.codehaus.org/repository/yfaces/</url>
-  	</repository>
-  	<snapshotRepository>
-  		<uniqueVersion>false</uniqueVersion>
-  		<id>codehaus.org</id>
-  		<name>YFaces Snapshots Repository</name>
-  		<url>dav:https://dav.codehaus.org/snapshots.repository/yfaces/</url>
-  	</snapshotRepository>
-  	<site>
-  		<id>codehaus.org</id>
-  		<name>YFaces Website</name>
-  		<url>dav:https://dav.codehaus.org/yfaces/</url>
-  	</site>
-  </distributionManagement>
+
+		<resources>
+		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2.SP1</version>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptors>
+						<descriptor>src/main/assembly/src.xml</descriptor>
+						<descriptor>src/main/assembly/dist.xml</descriptor>
+					</descriptors>
+				</configuration>
+			</plugin>
+		</plugins>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-webdav</artifactId>
+				<version>1.0-beta-1</version>
+			</extension>
+		</extensions>
+
+	</build>
+	<profiles>
+		<profile>
+			<id>distribute</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>wagon-maven-plugin</artifactId>
+						<version>1.0-beta-1</version>
+						<executions>
+							<execution>
+								<id>upload-distribution</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>upload</goal>
+								</goals>
+								 <configuration>
+            						<fromDir>target</fromDir>
+						            <includes>
+					            		${project.build.finalName}.jar,
+					            		${project.build.finalName}-src.zip,
+					            		${project.build.finalName}-dist.zip,
+						            </includes>
+						            <url>dav:https://dav.codehaus.org/dist/yfaces/</url>
+						            <serverId>codehaus.org</serverId>
+						            <toDir>${project.build.finalName}</toDir>
+						          </configuration>								
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
+
+	<repositories>
+		<repository>
+			<id>jboss-maven2-release-repository</id>
+			<url>http://repository.jboss.org/maven2/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+	</pluginRepositories>
+	<dependencies>
+		<dependency>
+			<groupId>com.sun.facelets</groupId>
+			<artifactId>jsf-facelets</artifactId>
+			<version>1.1.15.B1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>apache-log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.8</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>el-api</artifactId>
+			<version>1.2</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.myfaces.core</groupId>
+			<artifactId>myfaces-api</artifactId>
+			<version>1.2.4</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.myfaces.core</groupId>
+			<artifactId>myfaces-impl</artifactId>
+			<version>1.2.4</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.4</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+			<version>2.5.6</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>jboss</groupId>
+			<artifactId>jboss-serialization</artifactId>
+			<version>1.0.3.GA</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.5</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.1</version>
+			</plugin>
+		</plugins>
+	</reporting>
+	<dependencyManagement>
+		<dependencies>
+		</dependencies>
+	</dependencyManagement>
+	<distributionManagement>
+		<repository>
+			<id>codehaus.org</id>
+			<name>YFaces Repository</name>
+			<url>dav:https://dav.codehaus.org/repository/yfaces/</url>
+		</repository>
+		<snapshotRepository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>codehaus.org</id>
+			<name>YFaces Snapshots Repository</name>
+			<url>dav:https://dav.codehaus.org/snapshots.repository/yfaces/</url>
+		</snapshotRepository>
+		<site>
+			<id>codehaus.org</id>
+			<name>YFaces Website</name>
+			<url>dav:https://dav.codehaus.org/yfaces/</url>
+		</site>
+	</distributionManagement>
 </project>
