--- a/trunk/yfaces-core/pom.xml
+++ b/trunk/yfaces-core/pom.xml
@@ -214,6 +214,11 @@
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>2.1</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.4</version>
+			</plugin>
 		</plugins>
 	</reporting>
 	<dependencyManagement>
