--- a/yfaces-demo/WEB-INF/yfaces.properties
+++ b/yfaces-demo/WEB-INF/yfaces.properties
@@ -7,3 +7,4 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%-5p [%c{1}] %m%n
 log4j.rootLogger=info, CONSOLE
 
 log4j.logger.de.hybris.yfaces.YFacesTaglib=debug
+log4j.logger.de.hybris.yfaces.event.DebugPhaseListener=debug
