--- a/yfaces-demo/WEB-INF/web.xml
+++ b/yfaces-demo/WEB-INF/web.xml
@@ -62,6 +62,10 @@
 		<param-value>
 			/WEB-INF/yfaces-config.xml,
 			/WEB-INF/demo-faces-config.xml,
+			/demo/chp1/faces-config.xml,
+			/demo/chp2/faces-config.xml,
+			/demo/chp3/faces-config.xml,
+			/demo/chp4/faces-config.xml,
 		</param-value>
 	</context-param>
 	
@@ -72,6 +76,14 @@
 			/demo/**, /selenium/components
 		</param-value>
 	</context-param>
+	<context-param>
+		<param-name>yfaces.taglib.NAMESPACES</param-name>
+		<param-value>
+			$folder:/demo/**,
+		</param-value>
+	</context-param>
+	
+	
 	
 	<!-- JSF-Spec: 
 	1)/META-INF/faces-config.xml 
