--- a/trunk/yfaces-demo/.classpath
+++ b/trunk/yfaces-demo/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/prettysource"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/prettysource-0.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
