--- a/trunk/yfaces-demo/WEB-INF/web.xml
+++ b/trunk/yfaces-demo/WEB-INF/web.xml
@@ -62,10 +62,12 @@
 		<param-value>
 			/WEB-INF/yfaces-config.xml,
 			/WEB-INF/demo-faces-config.xml,
+			/selenium/selenium-faces-config.xml,
 			/demo/basic/faces-config.xml,
 			/demo/binding1/faces-config.xml,
 			/demo/binding2/faces-config.xml,
 			/demo/frame/faces-config.xml,
+			
 		</param-value>
 	</context-param>
 	
@@ -133,6 +135,16 @@
 		<param-name>facelets.DEVELOPMENT</param-name>
 		<param-value>false</param-value>
 	</context-param>
+	
+	
+	<filter>
+		<filter-name>seleniumFilter</filter-name>
+		<filter-class>de.hybris.yfaces.selenium.SeleniumFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>seleniumFilter</filter-name>
+		<url-pattern>/selenium/*</url-pattern>
+	</filter-mapping>
 	
 
 	<listener>
