--- a/trunk/yfaces-demo/WEB-INF/web.xml
+++ b/trunk/yfaces-demo/WEB-INF/web.xml
@@ -64,7 +64,7 @@
 		<param-value>
 			/WEB-INF/yfaces-config.xml,
 			/WEB-INF/demo-faces-config.xml,
-			/selenium/selenium-faces-config.xml,
+			/test/test-faces-config.xml,
 			/demo/basic/faces-config.xml,
 			/demo/binding1/faces-config.xml,
 			/demo/binding2/faces-config.xml,
@@ -77,7 +77,7 @@
 	<context-param>
 		<param-name>yfaces.taglib.DIR</param-name>
 		<param-value>
-			/demo/**, /selenium/components
+			/demo/**, /test/components
 		</param-value>
 	</context-param>
 	<context-param>
@@ -145,7 +145,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>seleniumFilter</filter-name>
-		<url-pattern>/selenium/*</url-pattern>
+		<url-pattern>/test/*</url-pattern>
 	</filter-mapping>
 	
 
