update to yfaxes-core 0.5.1 and prettysource 0.5

--- a/trunk/yfaces-demo/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/yfaces-demo/src/main/webapp/WEB-INF/web.xml
@@ -143,15 +143,8 @@
 	
 
 	<listener>
-		<listener-class>
-			de.hybris.yfaces.YFacesStartupListener
-		</listener-class>
+		<listener-class>de.hybris.yfaces.YFacesRequestListener</listener-class>
 	</listener>
-	
-	<!--  ServletRequestListener for Spring -->
-	<listener>
-    	<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-	</listener> 
 	
 	
 	<!-- Faces Servlet -->
