--- a/trunk/yfaces-demo/src/main/webapp/WEB-INF/yfaces.properties
+++ b/trunk/yfaces-demo/src/main/webapp/WEB-INF/yfaces.properties
@@ -1,4 +1,7 @@
-
+#
+# log4j configuration
+# is ignored when a log4j.properties configuration file is available
+#
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender 
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout 
@@ -6,5 +9,5 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%-5p [%c{1}] %m%n
 
 log4j.rootLogger=info, CONSOLE
 
-log4j.logger.de.hybris.yfaces.taglib.YFacesTaglib=debug
-log4j.logger.de.hybris.yfaces.event.DebugPhaseListener=debug
+log4j.logger.de.hybris.yfaces.YFacesTaglib=debug
+log4j.logger.de.hybris.yfaces.util.DebugPhaseListener=debug
